force-app/main/default/objects/Documentsdetails__c/Documentsdetails__c.object-meta.xml
<CustomObject>
    <label>Documents details</label>
    <nameField>
        <displayFormat>DD-{0000000}</displayFormat>
        <label>Documents details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>