force-app/main/default/objects/Documentsdetails__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <formula>text( ConsolBill__r.ChargeUnit__c )</formula>
    <label>Charge Unit</label>
    <type>Text</type>
</CustomField>