force-app/main/default/objects/Documentsdetails__c/fields/ConsolBill__c.field-meta.xml
<CustomField>
    <fullName>ConsolBill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consol Bill</label>
    <referenceTo>ConsolBill__c</referenceTo>
    <relationshipLabel>Documents details</relationshipLabel>
    <relationshipName>Documents_details</relationshipName>
    <type>Lookup</type>
</CustomField>