force-app/main/default/objects/Documentsdetails__c/fields/CurrencyBuying__c.field-meta.xml
<CustomField>
    <fullName>CurrencyBuying__c</fullName>
    <formula>text( ConsolBill__r.CurrencyBuying__c )</formula>
    <label>Currency Buying</label>
    <type>Text</type>
</CustomField>