force-app/main/default/objects/Documentsdetails__c/fields/CurrencySelling__c.field-meta.xml
<CustomField>
    <fullName>CurrencySelling__c</fullName>
    <formula>text( ConsolBill__r.CurrencySelling__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency Selling</label>
    <type>Text</type>
</CustomField>