force-app/main/default/objects/Documentsdetails__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <label>Document</label>
    <referenceTo>Document__c</referenceTo>
    <relationshipLabel>Documents details</relationshipLabel>
    <relationshipName>Documents_details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>