force-app/main/default/objects/Documentsdetails__c/fields/ExchangeRateLocal__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRateLocal__c</fullName>
    <label>Exchange Rate (VND)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>