force-app/main/default/objects/Documentsdetails__c/fields/FTMSSO__c.field-meta.xml
<CustomField>
    <fullName>FTMSSO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F/TMS S/O</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipLabel>Documents details</relationshipLabel>
    <relationshipName>Documents_details</relationshipName>
    <type>Lookup</type>
</CustomField>