force-app/main/default/objects/Documentsdetails__c/fields/PricingName__c.field-meta.xml
<CustomField>
    <fullName>PricingName__c</fullName>
    <formula>ConsolBill__r.PricingName__r.Name</formula>
    <label>Pricing Name</label>
    <type>Text</type>
</CustomField>