force-app/main/default/objects/Documentsdetails__c/fields/PricingNamePrinted__c.field-meta.xml
<CustomField>
    <fullName>PricingNamePrinted__c</fullName>
    <label>Pricing Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>