force-app/main/default/objects/Documentsdetails__c/fields/RecordType__c.field-meta.xml
<CustomField>
    <fullName>RecordType__c</fullName>
    <formula>Document__r.RecordType.Name</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>