force-app/main/default/objects/Documentsdetails__c/fields/TaxRatioBuying__c.field-meta.xml
<CustomField>
    <fullName>TaxRatioBuying__c</fullName>
    <formula>ConsolBill__r.TaxRatioBuying__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Ratio-Buying</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>