force-app/main/default/objects/Documentsdetails__c/fields/TaxRatioSelling__c.field-meta.xml
<CustomField>
    <fullName>TaxRatioSelling__c</fullName>
    <formula>ConsolBill__r.TaxRatioSelling__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Ratio-Selling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>