force-app/main/default/objects/Documentsdetails__c/fields/Total_Selling_Incl_Tax_FCY__c.field-meta.xml
<CustomField>
    <fullName>Total_Selling_Incl_Tax_FCY__c</fullName>
    <label>Total Selling Incl Tax (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>