force-app/main/default/objects/Documentsdetails__c/fields/TotalBuyingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalBuyingInclTaxActual__c</fullName>
    <label>Total Buying Incl Tax (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>