force-app/main/default/objects/Documentsdetails__c/fields/TotalSellingInclTaxActual__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingInclTaxActual__c</fullName>
    <label>Total Selling Incl Tax (Actual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>