force-app/main/default/objects/Documentsdetails__c/fields/UnitPriceofBuyingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingFCY__c</fullName>
    <formula>ConsolBill__r.UnitPriceofBuyingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price of Buying (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>