force-app/main/default/objects/Documentsdetails__c/fields/UnitPriceofBuyingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofBuyingLocal__c</fullName>
    <formula>ConsolBill__r.UnitPriceofBuyingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price of Buying (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>