force-app/main/default/objects/Documentsdetails__c/fields/UnitPriceofSellingActual__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofSellingActual__c</fullName>
    <label>Unit Price of Selling (Actual)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>