force-app/main/default/objects/Documentsdetails__c/fields/UnitPriceofSellingFCY__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofSellingFCY__c</fullName>
    <formula>ConsolBill__r.UnitPriceofSellingFCY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price of Selling (USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>