force-app/main/default/objects/Documentsdetails__c/fields/UnitPriceofSellingLocal__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceofSellingLocal__c</fullName>
    <formula>ConsolBill__r.UnitPriceofSellingLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price of Selling (VND)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>