force-app/main/default/objects/Documentsdetails__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Document__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CurrencyBuying__c</columns>
    <columns>UnitPriceofBuyingActual__c</columns>
    <columns>TotalBuyingInclTaxActual__c</columns>
    <columns>CurrencySelling__c</columns>
    <columns>UnitPriceofSellingActual__c</columns>
    <columns>TotalSellingInclTaxActual__c</columns>
    <columns>ConsolBill__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>